--- a/static/hello-world/package.json
+++ b/static/hello-world/package.json
@@ -9,7 +9,8 @@
     "ag-grid-community": "^28.1.1",
     "ag-grid-react": "^28.1.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-flow-renderer": "^10.3.17"
   },
   "devDependencies": {
     "react-scripts": "^2.1.3"
