--- a/static/hello-world/package.json
+++ b/static/hello-world/package.json
@@ -8,6 +8,7 @@
     "@forge/bridge": "^2.4.0",
     "ag-grid-community": "^28.1.1",
     "ag-grid-react": "^28.1.1",
+    "dagre": "^0.8.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-flow-renderer": "^10.3.17"
