added styling by Colin and Ryan

--- a/manifest.yml
+++ b/manifest.yml
@@ -17,6 +17,7 @@ permissions:
   scopes:
     - read:confluence-content.summary
     - write:confluence-content
+    - read:confluence-space.summary
   content:
     styles:
       - 'unsafe-inline'
