--- a/static/hello-world/package.json
+++ b/static/hello-world/package.json
@@ -11,7 +11,8 @@
     "dagre": "^0.8.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-flow-renderer": "^10.3.17"
+    "react-flow-renderer": "^10.3.17",
+    "react-select": "^5.5.6"
   },
   "devDependencies": {
     "react-scripts": "^2.1.3"
