--- a/static/hello-world/package.json
+++ b/static/hello-world/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^16.13.1",
     "react-flow-renderer": "^10.3.17",
+    "react-icons": "^4.6.0",
     "react-select": "^5.5.6"
   },
   "devDependencies": {
